--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -317,7 +317,7 @@ Easily serve features across your entire tech stack with SDKs in Python, JavaScr
 
 <RequestingFeaturesOnline style={{ height: 328 }} />
 
-With Chalk, MLOps teams easily serve low-latency ML systems and deploy models confidently with comprehensive observability and support for gradual rollouts and seamless rollbacks.
+With Chalk, MLOps teams confidently deploy and serve low-latency ML systems, benefiting from comprehensive observability while supporting gradual rollouts and seamless rollbacks.
 
 ---
 
@@ -380,7 +380,7 @@ class ProductRec:
     )
 ```
 
-With Chalk, AI engineers easily integrate unstructured data, build context-aware prompts, and run LLM evaluations at scale—all without managing vector databases, orchestrating complex data pipelines, or building high-performance infrastructure from scratch.
+With Chalk, AI engineers easily integrate unstructured data, build context-aware prompts, and run LLM evaluations at scale—all without managing vector databases, embedding providers, and complex retrieval systems.
 
 ---
 
@@ -430,7 +430,7 @@ Chalk evaluates features with point-in-time lookups, guaranteeing evaluation onl
 
 <TemporalCorrectness />
 
-With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness,](docs/temporal-consistency) and collaborate efficiently through Git-like branches and flexible data exports (to data catalogs, Parquet, Iceberg, etc.).
+With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness,](docs/temporal-consistency) and collaborate with Git-like branches and flexible data exports (to data catalogs, Parquet, Iceberg, etc.).
 
 ---
 
@@ -473,7 +473,7 @@ Chalk also integrates natively into your existing data infrastructure by [deploy
     - inherit existing security groups, policies, and ACLs
     - co-located resources and full-control over data residency to meet compliance requirements
 
-With Chalk, Data Engineers easily orchestrate complex data pipelines, manage features programmatically, and maintain production systems without the overhead of configuring YAML, writing custom scripts, or managing infrastructure.
+With Chalk, Data Engineers easily manage features programmatically and maintain production systems without the overhead of configuring YAML, custom scripts, or infrastructure.
 
 ---
 
