--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -179,7 +179,7 @@ F
 
 ### Testing for errors
 
-You can also use the check macro to test for errors `ChalkClient`. The `check` method allows assertion on values, errors, and cache hits. Mismatches between expected
+You can also use the check method to test for errors. This might look like the following:
 and resolved data will be printed in a table.
 
 ```python
