--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -44,7 +44,8 @@ Describe relationships between entities (e.g., users and transactions) with simp
 
 ```py
 import chalk.functions as F
-from chalk import features, DataFrame, Windowed, windowed, _
+from chalk.features import features
+from chalk import  DataFrame, Windowed, windowed, _
 
 @features
 class Transaction:
