--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -187,7 +187,7 @@ def get_username(
 ```
 
 Although written in Python, this function compiles into a static Velox expression through Chalk's Symbolic Python Interpreter and executes natively in C++.
-This provides Python-first development without sacrificing sub-5ms inference latency.
+This provides Python-first development without sacrificing performance.
 
 ```py
 lower(
