--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -230,7 +230,7 @@ Add a caching policy with one line of code in our feature definition:
 
 ### How do I deploy and query features with Chalk?
 
-After defining pipelines, deploy features to a branch in < 1s with:
+After defining pipelines, deploy features to a branch in <100ms with:
 Chalk automatically detects and uses your current git branch name without requiring you to explicitly specify it:
 
 ```shell
