fix: fake environment details

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -112,9 +112,9 @@ chalk query --in user.id=241 --out name_match --out transactions
 
 ```
 Results
-https://chalk.ai/environments/{environment}/query-runs/{query_id}
+https://chalk.ai/environments/devx/query-runs/4712089747
 Branch: elvis
-Environment: {environment}
+Environment: devx
 
  Name                       Hit?  Value
 ────────────────────────────────────────
@@ -248,9 +248,9 @@ This command returns the user's features from your branch deployment, showing al
 ```
 Using '--out=user'
 Results
-https://chalk.ai/environments/{environment}/query-runs/{query_id}
+https://chalk.ai/environments/devx/query-runs/4701020347
 Branch: elvis
-Environment: {environment}
+Environment: devx
 
  Name                                             Hit?  Value
 ─────────────────────────────────────────────────────────────────────────────────────────────────────
