fix: no downtime

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -266,7 +266,7 @@ Environment: devx
  user.unique_products_inquired_about        203
 ```
 
-Once validated, promote the deployment to production, which is served at a unique preview URL.
+Once you validate the deployment, promote it to production with a single CLI command and no downtime (blue-green deployments).
 
 ```shell
 chalk apply
