--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -281,7 +281,7 @@ The ability to re-use the same features in both contexts dramatically shortens d
 
 Chalk is the first platform to unify feature and prompt engineering, LLM evals, and real-time inference into a unified platform.
 Bridge the gap between experimentation and production with a single system that unifies offline and online inference.
-Chalk retrieves and computes dynamically at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox)--we maintain a fork that’s been heavily optimized for low-latency (< 3 ms).
+Chalk retrieves and computes dynamically at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox) — we maintain a fork that's been heavily optimized for low-latency (< 3 ms).
 
 Unifying online and offline execution enables teams to
 
