--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -291,7 +291,7 @@ Unifying online and offline execution enables teams to
 
 **No DSLs, no rewrites, just ordinary Python**
 
-Define features in Python that are run natively in Rust, C++, or as UDFs — no need to manually port notebooks and code into other languages e.g. Scala.
+Define features in Python that are run natively in Rust or C++ — no need to rewrite notebook code into other faster languages manually.
 
 **See everything, debug anything**
 
