fix: removing examples as it makes the bullet less clear

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -287,7 +287,7 @@ Unifying online and offline execution enables teams to
 
 - consolidate training and serving into a single version controlled environment
 - reduce time-to-production for new models from months to days
-- build advanced AI systems (RAG, RecSys, Fraud detection, etc.) without building custom infrastructure
+- build advanced AI systems without building custom infrastructure
 
 **No DSLs, no rewrites, just ordinary Python**
 
