fix: Improving the sentence for the persona

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -319,7 +319,7 @@ Deploy faster and with confidence — knowing exactly how your systems behave at
 
 Let Chalk handle orchestrating, caching, and serving features at scale freeing up you and your team to focus on building models—not plumbing.
 
-Democratize modern software engineering practices, with Chalk:
+Chalk brings modern software engineering to data workflows:
 
 - Features are discoverable and auditable across all environments
 - Experimental changes are isolated to branches and safely promoted via CLI with gradual rollouts
