--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -263,7 +263,7 @@ The ability to re-use the same features in both contexts dramatically shortens d
 ## Why Chalk?
 
 Chalk computes features at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox) — we maintain a fork that's been heavily optimized for low-latency (< 3 ms).
-This low-latency execution enables Chalk unify offline and online inference into a single system:
+This low-latency execution enables Chalk unify offline and online inference into a single system.
 
 Bridging the gap between experimentation and production enables teams to:
 
