--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -256,16 +256,14 @@ chalk apply
 ```
 
 These features are now available for low-latency [online inference](/docs/query-basics) and [offline training](/docs/training-client).
-The ability to re-use the same features in both contexts dramatically shortens development time and ensures that feature values from online and offline contexts match.
 
 ---
 
 ## Why Chalk?
 
-Chalk computes features at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox) — we maintain a fork that's been heavily optimized for low-latency (< 3 ms).
-This low-latency execution enables Chalk unify offline and online inference into a single system.
-
-Bridging the gap between experimentation and production enables teams to:
+Features are computed at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox) — we maintain a fork that's been heavily optimized for low-latency (< 3 ms).
+With this low-latency execution, Chalk seamlessly unifies offline and online inference — bridging the gap between experimentation and production.
+This unified approach enables teams to:
 
 - Establish a single source of truth for feature definitions and transformations that's shareable across the organization
 - Consolidate training and serving into a single version controlled environment
