--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -24,11 +24,11 @@ Chalk solves core pain points teams face when building enterprise AI and ML syst
 - Deploying and scaling production-grade infrastructure
 - Authoring feature pipelines in pure Python — No DSLs! No rewrites!
 - Building training datasets with high throughput batch offline queries and point-in-time correctness
-- Evaluating LLMs at scale by integrating unstructured inputs into pipelines
+- Integrating unstructured data into production ML pipelines with LLMs
 - Serving fresh features on-the-fly with versioning, branching, and full observability
     - Gradually rollout, easily rollback, and feature flag models with version control
     - Collaborate across teams with branch-based QA
-    - A/B test with real historical production traffic by leveraging Chalk's feature store
+    - A/B testing models and LLM prompts with real historical traffic
 
 Chalk is the first platform to unify feature and prompt engineering, LLM evals, and real-time low-latency inference into a unified platform.
 
