--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -63,7 +63,7 @@ class Transaction:
     # reference a feature from another class to create a join key
     user_id: "User.id"
 
-    # Chalk infers that "User.id" is join key
+    # Chalk infers that "User.id" is a join key
     # enabling you to reference the User class
     # associated with this transaction!
     user: "User"
