fix: Adjusting sources

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -70,7 +70,7 @@ class Transaction:
 @features
 class User:
     # id, name, email are pulled from underlying data sources like
-    # SQL (Postgres, Athena, Glue, Iceberg), Snowflake, Databricks, Kafka streams, etc.
+    # Postgres, Kafka, Iceberg, Athena, Snowflake, Databricks, etc.
     # with a SQL resolver
     id: int
     name: str
