fix: code comments

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -76,7 +76,8 @@ class User:
     name: str
     email: str
 
-    # username is computed with a Python resolver
+    # computed with `get_username`
+    # a Python resolver (function)
     username: str
 
     # Chalk's SDK provides common functions that run in C++
