--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -153,7 +153,7 @@ Each node in the DAG is a Chalk expression or resolver (SQL / Python):
 - An expression e.g. `is_expensive_purchase: bool = _.amount > 100`
 - A SQL file ending in `.chalk.sql` that connects to an underlying data store like Athena
 - A Python function that explicitly inputs and outputs features
-    - Use the Python packages you're familiar with and easily call 3rd-party clients e.g. Polars, httpx, or OpenAI
+    - Use the Python packages you're familiar with and easily call 3rd-party clients e.g. Polars, httpx, OpenAI, etc.
 
 Here's an example of a generated query plan:
 
