fix: bridging the gap

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -267,8 +267,8 @@ These features are now available for low-latency [online inference](/docs/query-
 ## Why Chalk?
 
 Features are computed at inference time with an execution engine called [Velox](https://github.com/facebookincubator/velox) — we maintain a fork that's been heavily optimized for low-latency (< 3 ms).
-With this low-latency execution, Chalk seamlessly unifies offline and online inference — bridging the gap between experimentation and production.
-This unified approach enables teams to:
+Chalk's low-latency execution enables us to bridge the gap between experimentation and production by unifying offline and online inference.
+With this unified approach, teams can easily:
 
 - Establish a single source of truth for feature definitions and transformations that's shareable across the organization
 - Consolidate training and serving into a single version controlled environment
