--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -302,7 +302,7 @@ lower(
 
 We wrote an [engineering blog post on our Symbolic Python interpreter](https://chalk.ai/blog/symbolic-python-interpreter) if you want to learn more!
 
-**Observability:** See everything, debug anything
+### Observability
 
 Traditional ML systems often operate as opaque black boxes, especially when transformation logic gets embedded across disparate data pipelines, obscuring the connection between inputs and predictions.
 Chalk brings comprehensive observability to every aspect of your ML systems, making it easy to:
