--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -493,5 +493,4 @@ With Chalk, Data Engineers easily manage features programmatically and maintain 
 ## A full-stack solution for building and deploying enterprise AI
 
 Chalk gives teams the building blocks to prototype and deploy production AI and ML systems quickly and reliably.
-Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the platform for low-latency, real-time ML at scale.
-[Schedule a demo](https://chalk.ai/book-demo) to see how Chalk fits with your team!
+Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the go-to platform for inference!
