--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -292,7 +292,7 @@ lower(
                 ),
                 int(1)
             ),
-            str(.),
+            str(),
             str()
         ),
         element_at(split(str(email), str(@)), int(1))
